--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <link rel="stylesheet" href="styles.css">
         <meta name="viewport" content="width=content-width"/>
         <title>India's Space Programme Timeline</title>
     </head>
