--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>India's Space Programme Timeline</title>
     </head>
     <body>
+        <script src="script.js"></script>
         <header>
             <div>Logo</div>
             <button>Theme</button>
